--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
+    "nodemailer": "^6.9.13",
+    "otp-generator": "^4.0.1",
     "razorpay": "^2.9.2"
   }
 }
