--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dicebear": "^8.0.0",
     "prettier": "^3.2.5",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
