--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-razorpay": "^2.0.1",
